--- a/packages/wallet-standard/package.json
+++ b/packages/wallet-standard/package.json
@@ -7,7 +7,7 @@
     "@workspace/keypair": "workspace:*"
   },
   "devDependencies": {
-    "@types/node": "catalog:",
+    "@types/bun": "catalog:",
     "@workspace/config-typescript": "workspace:*",
     "typescript": "catalog:"
   },
