--- a/turbo/generators/package.json
+++ b/turbo/generators/package.json
@@ -4,6 +4,7 @@
     "@workspace/config-typescript": "workspace:*",
     "typescript": "catalog:"
   },
+  "name": "generators",
   "scripts": {
     "check-types": "tsc --noEmit"
   },
