--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,10 +26,10 @@ jobs:
         uses: ./.github/workflows/actions/install-dependencies
 
       - name: Build
-        run: pnpm build
+        run: bun run build
 
       - name: Publish to pkg.pr.new
-        run: pnpm pkg-pr-new publish --pnpm --packageManager=pnpm './packages/*' --comment=off
+        run: bun pkg-pr-new publish --packageManager=bun './packages/*' --comment=off
 
   check-types:
     runs-on: ubuntu-latest
@@ -41,7 +41,7 @@ jobs:
         uses: ./.github/workflows/actions/install-dependencies
 
       - name: Check Types
-        run: pnpm check-types
+        run: bun check-types
 
   lint:
     runs-on: ubuntu-latest
@@ -53,7 +53,7 @@ jobs:
         uses: ./.github/workflows/actions/install-dependencies
 
       - name: Lint
-        run: pnpm lint
+        run: bun lint
 
   test:
     runs-on: ubuntu-latest
@@ -65,7 +65,7 @@ jobs:
         uses: ./.github/workflows/actions/install-dependencies
 
       - name: Test
-        run: pnpm test
+        run: bun run test
 
   commitlint:
     runs-on: ubuntu-latest
@@ -80,8 +80,8 @@ jobs:
 
       - name: Validate current commit (last commit) with commitlint
         if: github.event_name == 'push'
-        run: pnpm commitlint --last --verbose
+        run: bun commitlint --last --verbose
 
       - name: Validate PR commits with commitlint
         if: github.event_name == 'pull_request'
-        run: pnpm commitlint --from ${{ github.event.pull_request.head.sha }}~${{ github.event.pull_request.commits }} --to ${{ github.event.pull_request.head.sha }} --verbose
+        run: bun commitlint --from ${{ github.event.pull_request.head.sha }}~${{ github.event.pull_request.commits }} --to ${{ github.event.pull_request.head.sha }} --verbose
