--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,7 +3,7 @@
     "hono": "^4.10.3"
   },
   "devDependencies": {
-    "@types/node": "catalog:",
+    "@types/bun": "catalog:",
     "@workspace/config-typescript": "workspace:*",
     "tsx": "^4.7.1",
     "typescript": "catalog:",
