--- a/package.json
+++ b/package.json
@@ -1,4 +1,32 @@
 {
+  "catalog": {
+    "@eslint/js": "9.38.0",
+    "@hookform/resolvers": "^5.2.2",
+    "@solana-program/system": "0.9.0",
+    "@solana-program/token": "0.7.0",
+    "@solana-program/token-2022": "0.6.0",
+    "@solana/kit": "5.0.0",
+    "@tailwindcss/postcss": "4.1.16",
+    "@tailwindcss/vite": "4.1.16",
+    "@tanstack/react-query": "5.90.5",
+    "@types/bun": "1.3.1",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
+    "eslint": "9.38.0",
+    "globals": "16.4.0",
+    "jsdom": "27.0.1",
+    "lucide-react": "0.548.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-hook-form": "^7.65.0",
+    "react-router": "7.9.4",
+    "tailwindcss": "4.1.16",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.46.2",
+    "vitest": "4.0.7",
+    "ws": "8.18.3",
+    "zod": "^4.1.12"
+  },
   "devDependencies": {
     "@biomejs/biome": "2.3.3",
     "@commitlint/cli": "^20.1.0",
@@ -7,15 +35,15 @@
     "@radix-ui/react-select": "^2.2.6",
     "lefthook": "^2.0.1",
     "pkg-pr-new": "^0.0.60",
-    "turbo": "^2.5.8",
+    "turbo": "^2.6.0",
     "vitest": "catalog:"
   },
   "engines": {
-    "node": ">=24",
-    "pnpm": ">=10"
+    "bun": ">=1.3.1",
+    "node": ">=24"
   },
   "name": "samui",
-  "packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd",
+  "packageManager": "bun@1.3.1",
   "pnpm": {
     "onlyBuiltDependencies": ["@tailwindcss/oxide", "esbuild", "lefthook", "sharp"]
   },
@@ -24,13 +52,16 @@
     "build": "turbo run build",
     "check-types": "turbo run check-types",
     "dev": "turbo run dev",
+    "format": "syncpack format && prettier --write .",
+    "format:check": "syncpack format --check && prettier --check .",
     "lint": "biome check --error-on-warnings",
     "lint:fix": "biome check --error-on-warnings --write",
-    "preinstall": "npx only-allow pnpm",
+    "preinstall": "npx only-allow bun",
     "prepare": "lefthook install",
-    "test": "vitest run",
+    "test": "vitest",
     "test:watch": "vitest --watch"
   },
   "type": "module",
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "workspaces": ["apps/*", "packages/*", "turbo/*"]
 }
