--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -7,7 +7,7 @@
     "zod": "catalog:"
   },
   "devDependencies": {
-    "@types/node": "catalog:",
+    "@types/bun": "catalog:",
     "@workspace/config-typescript": "workspace:*",
     "@workspace/config-vitest": "workspace:*",
     "fake-indexeddb": "^6.2.4",
