--- a/packages/keypair/package.json
+++ b/packages/keypair/package.json
@@ -7,7 +7,7 @@
     "micro-key-producer": "^0.8.2"
   },
   "devDependencies": {
-    "@types/node": "catalog:",
+    "@types/bun": "catalog:",
     "@workspace/config-typescript": "workspace:*",
     "@workspace/config-vitest": "workspace:*",
     "typescript": "catalog:",
