--- a/packages/onboarding/package.json
+++ b/packages/onboarding/package.json
@@ -14,7 +14,7 @@
     "react-router": "catalog:"
   },
   "devDependencies": {
-    "@types/node": "catalog:",
+    "@types/bun": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@workspace/config-typescript": "workspace:*",
