--- a/packages/solana-client/package.json
+++ b/packages/solana-client/package.json
@@ -7,7 +7,7 @@
     "ws": "catalog:"
   },
   "devDependencies": {
-    "@types/node": "catalog:",
+    "@types/bun": "catalog:",
     "@workspace/config-typescript": "workspace:*",
     "@workspace/config-vitest": "workspace:*",
     "typescript": "catalog:",
