--- a/packages/tui/package.json
+++ b/packages/tui/package.json
@@ -5,8 +5,7 @@
     "react": "catalog:"
   },
   "devDependencies": {
-    "@types/bun": "latest",
-    "@types/node": "catalog:",
+    "@types/bun": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@workspace/config-typescript": "workspace:*",
