--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -5,11 +5,15 @@
     "@solana/wallet-standard-features": "^1.3.0",
     "@tanstack/react-query": "catalog:",
     "@workspace/background": "workspace:*",
+    "@workspace/env": "workspace:*",
+    "@workspace/i18n": "workspace:*",
     "@workspace/keypair": "workspace:*",
+    "@workspace/shell": "workspace:*",
     "@workspace/ui": "workspace:*",
     "@workspace/wallet-standard": "workspace:*",
     "react": "catalog:",
-    "react-dom": "catalog:"
+    "react-dom": "catalog:",
+    "react-router": "catalog:"
   },
   "devDependencies": {
     "@tailwindcss/vite": "catalog:",
