--- a/examples/basic/tsconfig.app.json
+++ b/examples/basic/tsconfig.app.json
@@ -22,13 +22,13 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true,
 
     /* Path aliases */
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "noUncheckedSideEffectImports": true
   },
   "include": ["src"]
 }
