--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "catalog:",
     "@vitejs/plugin-react": "^4.6.0",
     "@workspace/config-eslint": "workspace:*",
+    "@workspace/config-typescript": "workspace:*",
     "eslint": "catalog:",
     "tailwindcss": "catalog:",
     "typescript": "catalog:",
