--- a/packages/keypair/tsconfig.json
+++ b/packages/keypair/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "extends": "@workspace/config-typescript/base.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "module": "ESNext",
-    "moduleResolution": "Bundler"
-  },
-  "include": ["src", "test"],
-  "exclude": ["node_modules", "dist"]
+    "outDir": "dist"
+  }
 }
