--- a/packages/solana-client-react/package.json
+++ b/packages/solana-client-react/package.json
@@ -31,5 +31,6 @@
     "check-types": "tsc --noEmit",
     "lint": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --max-warnings=0 --fix"
-  }
+  },
+  "type": "module"
 }
