--- a/packages/wallet-standard/package.json
+++ b/packages/wallet-standard/package.json
@@ -25,5 +25,6 @@
     "check-types": "tsc --noEmit",
     "lint": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --max-warnings=0 --fix"
-  }
+  },
+  "type": "module"
 }
