--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "@workspace/config-typescript/base.json",
-  "include": ["src"],
-  "exclude": ["node_modules"]
+  "compilerOptions": {
+    "outDir": "dist"
+  }
 }
