--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -16,6 +16,7 @@
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@workspace/config-eslint": "workspace:*",
+    "@workspace/config-typescript": "workspace:*",
     "@wxt-dev/auto-icons": "^1.1.0",
     "@wxt-dev/module-react": "^1.1.3",
     "eslint": "catalog:",
