--- a/apps/extension/tsconfig.json
+++ b/apps/extension/tsconfig.json
@@ -1,7 +1,8 @@
 {
-  "extends": "./.wxt/tsconfig.json",
+  "extends": ["@workspace/config-typescript/react-library.json", "./.wxt/tsconfig.json"],
   "compilerOptions": {
-    "allowImportingTsExtensions": true,
-    "jsx": "react-jsx"
-  }
+    "outDir": "dist"
+  },
+  "include": ["src", "./.wxt/wxt.d.ts"],
+  "exclude": ["node_modules", "dist"]
 }
