--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -9,6 +9,10 @@
     "sharp": "^0.34.2",
     "tailwindcss": "catalog:"
   },
+  "devDependencies": {
+    "@workspace/config-typescript": "workspace:*",
+    "typescript": "catalog:"
+  },
   "scripts": {
     "astro": "astro",
     "build": "astro build",
