--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "@commitlint/config-conventional": "^20.0.0",
     "@commitlint/types": "^20.0.0",
     "@radix-ui/react-select": "^2.2.6",
+    "@turbo/gen": "^2.5.8",
     "@workspace/config-eslint": "workspace:*",
-    "@workspace/config-typescript": "workspace:*",
     "lefthook": "^2.0.1",
     "pkg-pr-new": "^0.0.60",
     "syncpack": "14.0.0-alpha.23",
     "turbo": "^2.5.8",
-    "typescript": "catalog:",
     "vitest": "catalog:"
   },
   "engines": {
@@ -37,5 +36,6 @@
     "prepare": "lefthook install",
     "test": "vitest run",
     "test:watch": "vitest --watch"
-  }
+  },
+  "type": "module"
 }
