--- a/packages/config-typescript/package.json
+++ b/packages/config-typescript/package.json
@@ -2,5 +2,6 @@
   "name": "@workspace/config-typescript",
   "version": "0.0.0",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "type": "module"
 }
