--- a/packages/db-react/package.json
+++ b/packages/db-react/package.json
@@ -30,5 +30,6 @@
     "lint:fix": "eslint . --fix",
     "test": "vitest run",
     "test:watch": "vitest --watch"
-  }
+  },
+  "type": "module"
 }
