--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -31,5 +31,6 @@
     "lint:fix": "eslint . --max-warnings=0 --fix",
     "test": "vitest run",
     "test:watch": "vitest --watch"
-  }
+  },
+  "type": "module"
 }
