--- a/packages/keypair/package.json
+++ b/packages/keypair/package.json
@@ -27,5 +27,6 @@
     "lint:fix": "eslint . --max-warnings=0 --fix",
     "test": "vitest run",
     "test:watch": "vitest --watch"
-  }
+  },
+  "type": "module"
 }
