--- a/packages/solana-client/package.json
+++ b/packages/solana-client/package.json
@@ -28,5 +28,6 @@
     "lint:fix": "eslint . --max-warnings=0 --fix",
     "test": "vitest run",
     "test:watch": "vitest --watch"
-  }
+  },
+  "type": "module"
 }
