--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "samui",
   "version": "0.0.0",
   "devDependencies": {
+    "@biomejs/biome": "2.3.3",
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
     "@commitlint/types": "^20.0.0",
@@ -10,7 +11,6 @@
     "@workspace/config-typescript": "workspace:*",
     "lefthook": "^2.0.1",
     "pkg-pr-new": "^0.0.60",
-    "prettier": "^3.6.2",
     "syncpack": "14.0.0-alpha.23",
     "turbo": "^2.5.8",
     "typescript": "catalog:",
@@ -34,8 +34,8 @@
     "build": "turbo run build",
     "check-types": "turbo run check-types",
     "dev": "turbo run dev",
-    "format": "syncpack format && NODE_OPTIONS=\"--experimental-strip-types\" prettier --write .",
-    "format:check": "syncpack format --check && NODE_OPTIONS=\"--experimental-strip-types\" prettier --check .",
+    "format": "syncpack format && biome format --write",
+    "format:check": "syncpack format --check && biome format",
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
     "preinstall": "npx only-allow pnpm",
