--- a/apps/web/wrangler.jsonc
+++ b/apps/web/wrangler.jsonc
@@ -4,18 +4,18 @@
   "compatibility_date": "2025-10-17",
   "assets": {
     "directory": "./dist",
-    "not_found_handling": "single-page-application",
+    "not_found_handling": "single-page-application"
   },
   "observability": {
     "enabled": true,
-    "head_sampling_rate": 1,
+    "head_sampling_rate": 1
   },
   "preview_urls": true,
   "routes": [
     {
       "pattern": "wallet.samui.build",
-      "custom_domain": true,
-    },
+      "custom_domain": true
+    }
   ],
-  "send_metrics": false,
+  "send_metrics": false
 }
