--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -9,10 +9,7 @@
   },
   "devDependencies": {
     "@types/react": "catalog:",
-    "@workspace/config-eslint": "workspace:^",
     "@workspace/config-typescript": "workspace:*",
-    "eslint": "catalog:",
-    "eslint-config-expo": "~10.0.0",
     "typescript": "catalog:"
   },
   "main": "index.ts",
@@ -20,8 +17,7 @@
   "scripts": {
     "android": "expo start --android",
     "dev": "expo start",
-    "ios": "expo start --ios",
-    "lint": "expo lint"
+    "ios": "expo start --ios"
   },
   "type": "module"
 }
