--- a/packages/tui/package.json
+++ b/packages/tui/package.json
@@ -11,9 +11,7 @@
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
-    "@workspace/config-eslint": "workspace:*",
     "@workspace/config-typescript": "workspace:*",
-    "eslint": "catalog:",
     "typescript": "catalog:"
   },
   "exports": {
@@ -24,9 +22,7 @@
   "module": "src/index.tsx",
   "private": false,
   "scripts": {
-    "check-types": "tsc --noEmit",
-    "lint": "eslint . --max-warnings=0",
-    "lint:fix": "eslint . --max-warnings=0 --fix"
+    "check-types": "tsc --noEmit"
   },
   "type": "module"
 }
