--- a/lefthook.yaml
+++ b/lefthook.yaml
@@ -1,13 +1,9 @@
 pre-commit:
   parallel: true
   jobs:
-    - name: format
-      run: pnpm format
-      glob: '*'
-
     - name: lint
       run: pnpm lint
-      glob: '*'
+      glob: "*"
 
 commit-msg:
   parallel: true
