--- a/packages/background/package.json
+++ b/packages/background/package.json
@@ -15,9 +15,7 @@
   },
   "devDependencies": {
     "@types/node": "catalog:",
-    "@workspace/config-eslint": "workspace:*",
     "@workspace/config-typescript": "workspace:*",
-    "eslint": "catalog:",
     "typescript": "catalog:"
   },
   "exports": {
@@ -27,9 +25,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "check-types": "tsc --noEmit",
-    "lint": "eslint . --max-warnings=0",
-    "lint:fix": "eslint . --max-warnings=0 --fix"
+    "check-types": "tsc --noEmit"
   },
   "type": "module"
 }
