--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,19 +3,17 @@ packages:
   - packages/*
 
 catalog:
-  '@eslint/js': 9.38.0
-  '@hookform/resolvers': ^5.2.2
-  '@solana-program/system': 0.9.0
-  '@solana-program/token': 0.7.0
-  '@solana-program/token-2022': 0.6.0
-  '@solana/kit': 5.0.0
-  '@tailwindcss/postcss': 4.1.16
-  '@tailwindcss/vite': 4.1.16
-  '@tanstack/react-query': 5.90.5
-  '@types/node': 24.9.1
-  '@types/react': 19.2.2
-  '@types/react-dom': 19.2.2
-  eslint: 9.38.0
+  "@hookform/resolvers": ^5.2.2
+  "@solana-program/system": 0.9.0
+  "@solana-program/token": 0.7.0
+  "@solana-program/token-2022": 0.6.0
+  "@solana/kit": 5.0.0
+  "@tailwindcss/postcss": 4.1.16
+  "@tailwindcss/vite": 4.1.16
+  "@tanstack/react-query": 5.90.5
+  "@types/node": 24.9.1
+  "@types/react": 19.2.2
+  "@types/react-dom": 19.2.2
   globals: 16.4.0
   jsdom: 27.0.1
   lucide-react: 0.548.0
@@ -25,7 +23,6 @@ catalog:
   react-router: 7.9.4
   tailwindcss: 4.1.16
   typescript: 5.9.3
-  typescript-eslint: 8.46.2
   vitest: 4.0.4
   ws: 8.18.3
   zod: ^4.1.12
