chore: fix manual errors

--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "@commitlint/config-conventional": "^20.0.0",
     "@commitlint/types": "^20.0.0",
     "@radix-ui/react-select": "^2.2.6",
-    "@turbo/gen": "^2.5.8",
     "lefthook": "^2.0.1",
     "pkg-pr-new": "^0.0.60",
     "turbo": "^2.5.8",
@@ -25,8 +24,8 @@
     "build": "turbo run build",
     "check-types": "turbo run check-types",
     "dev": "turbo run dev",
-    "lint": "biome check",
-    "lint:fix": "biome check --write",
+    "lint": "biome check --error-on-warnings",
+    "lint:fix": "biome check --error-on-warnings --write",
     "preinstall": "npx only-allow pnpm",
     "prepare": "lefthook install",
     "test": "vitest run",
