--- a/biome.json
+++ b/biome.json
@@ -53,9 +53,32 @@
     },
     "enabled": true,
     "rules": {
-      "recommended": true
+      "complexity": {
+        "useLiteralKeys": "off"
+      },
+      "recommended": true,
+      "style": {
+        "useComponentExportOnlyModules": {
+          "options": {
+            "allowConstantExport": true
+          }
+        }
+      }
     }
   },
+  "overrides": [
+    {
+      "includes": ["**/*.astro"],
+      "linter": {
+        "rules": {
+          "correctness": {
+            "noUnusedImports": "off",
+            "noUnusedVariables": "off"
+          }
+        }
+      }
+    }
+  ],
   "vcs": {
     "clientKind": "git",
     "defaultBranch": "main",
