--- a/packages/db-react/package.json
+++ b/packages/db-react/package.json
@@ -13,7 +13,8 @@
     "@types/react-dom": "catalog:",
     "@workspace/config-typescript": "workspace:*",
     "@workspace/config-vitest": "workspace:*",
-    "typescript": "catalog:"
+    "typescript": "catalog:",
+    "vitest": "catalog:"
   },
   "exports": {
     "./*": "./src/*.tsx"
