--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -11,7 +11,8 @@
     "@workspace/config-typescript": "workspace:*",
     "@workspace/config-vitest": "workspace:*",
     "fake-indexeddb": "^6.2.4",
-    "typescript": "catalog:"
+    "typescript": "catalog:",
+    "vitest": "catalog:"
   },
   "exports": {
     "./*": "./src/*.ts"
