--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -49,7 +49,8 @@
     "@workspace/config-vitest": "workspace:*",
     "jsdom": "catalog:",
     "tailwindcss": "catalog:",
-    "typescript": "catalog:"
+    "typescript": "catalog:",
+    "vitest": "catalog:"
   },
   "exports": {
     "./components/*": "./src/components/*.tsx",
