--- a/turbo/generators/package.json
+++ b/turbo/generators/package.json
@@ -1,3 +1,11 @@
 {
+  "devDependencies": {
+    "@turbo/gen": "^2.5.8",
+    "@workspace/config-typescript": "workspace:*",
+    "typescript": "catalog:"
+  },
+  "scripts": {
+    "check-types": "tsc --noEmit"
+  },
   "type": "commonjs"
 }
