--- a/examples/basic/tsconfig.json
+++ b/examples/basic/tsconfig.json
@@ -4,24 +4,21 @@
     "allowSyntheticDefaultImports": true,
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
+    "baseUrl": ".",
     "composite": true,
     "declaration": true,
     "declarationMap": true,
     "erasableSyntaxOnly": true,
-
     "esModuleInterop": true,
     "exactOptionalPropertyTypes": true,
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
     "isolatedModules": true,
-
     "jsx": "react-jsx",
     "lib": ["ES2023", "DOM", "DOM.Iterable"],
-
     "module": "ESNext",
     "moduleDetection": "force",
     "moduleResolution": "Bundler",
-
     "noEmit": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
@@ -32,12 +29,13 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "outDir": "dist",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     "resolveJsonModule": true,
-
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-
     "target": "ES2022",
     "useDefineForClassFields": true,
     "verbatimModuleSyntax": true
