--- a/packages/config-vitest/package.json
+++ b/packages/config-vitest/package.json
@@ -1,10 +1,9 @@
 {
-  "dependencies": {
-    "vitest": "catalog:"
-  },
   "devDependencies": {
+    "@types/node": "catalog:",
     "@workspace/config-typescript": "workspace:*",
-    "typescript": "catalog:"
+    "typescript": "catalog:",
+    "vitest": "catalog:"
   },
   "exports": {
     ".": "./src/index.ts",
