--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -1,6 +1,11 @@
 version: 2
 updates:
-  - package-ecosystem: 'npm'
+  - package-ecosystem: 'bun'
     directory: '/'
+    schedule:
+      interval: 'daily'
+
+  - package-ecosystem: 'cargo'
+    directory: '/apps/desktop/src-tauri'
     schedule:
       interval: 'daily'
