feat: automate env setup via postinstall script (#355)
Signed-off-by: Arihant Bansal <17180950+arihantbansal@users.noreply.github.com>
Co-authored-by: beeman <beeman@beeman.nl>

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,7 +17,7 @@
     "check-types": "tsc --noEmit",
     "deploy": "wrangler deploy --minify",
     "dev": "wrangler dev",
-    "postinstall": "bun run cf-typegen"
+    "postinstall": "[ -f .env.example ] && [ ! -f .env ] && cp -v .env.example .env || true; bun run cf-typegen"
   },
   "type": "module",
   "version": "0.0.0"
