--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,21 +1,44 @@
 {
   "dependencies": {
-    "expo": "~54.0.20",
+    "@react-navigation/bottom-tabs": "^7.8.4",
+    "@react-navigation/elements": "^2.8.1",
+    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/native-stack": "^7.6.2",
+    "culori": "^4.0.2",
+    "eas-cli": "^16.26.0",
+    "expo": "54.0.23",
     "expo-status-bar": "~3.0.8",
-    "react": "catalog:",
-    "react-native": "0.82.1"
+    "lucide-react-native": "^0.553.0",
+    "nativewind": "^5.0.0-preview.2",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-css": "^3.0.1",
+    "react-native-reanimated": "^4.1.3",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
-    "@types/react": "catalog:",
+    "@expo/metro-config": "~54.0.2",
+    "@tailwindcss/postcss": "catalog:",
+    "@types/culori": "^4.0.1",
+    "@types/react": "~19.1.10",
     "@workspace/config-typescript": "workspace:*",
+    "postcss": "^8.5.6",
+    "tailwindcss": "catalog:",
     "typescript": "catalog:"
   },
   "main": "index.ts",
   "name": "mobile",
+  "overrides": {
+    "lightningcss": "1.30.1"
+  },
   "private": true,
   "scripts": {
     "android": "expo start --android",
-    "dev": "expo start",
+    "dev": "expo start --clear",
+    "doctor": " bunx expo-doctor@latest --verbose",
+    "install:check": " bunx expo install --check",
+    "install:fix": " bunx expo install --fix",
     "ios": "expo start --ios"
   },
   "type": "module",
