--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "node": ">=24"
   },
   "name": "samui",
+  "overrides": {
+    "lightningcss": "1.30.1"
+  },
   "packageManager": "bun@1.3.1",
   "pnpm": {
     "onlyBuiltDependencies": ["@tailwindcss/oxide", "esbuild", "lefthook", "sharp"]
