--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/bun": "1.3.1",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
+    "effect": "3.19.3",
     "eslint": "9.38.0",
     "globals": "16.4.0",
     "jsdom": "27.0.1",
