--- a/packages/config-vitest/package.json
+++ b/packages/config-vitest/package.json
@@ -1,12 +1,15 @@
 {
   "devDependencies": {
     "@types/bun": "catalog:",
+    "@types/wait-on": "^5.3.4",
     "@workspace/config-typescript": "workspace:*",
     "typescript": "catalog:",
-    "vitest": "catalog:"
+    "vitest": "catalog:",
+    "wait-on": "^9.0.3"
   },
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./*": "./src/*.ts"
   },
   "name": "@workspace/config-vitest",
   "private": true,
