feat(explorer): basic explorer feature

--- a/packages/explorer/package.json
+++ b/packages/explorer/package.json
@@ -1,14 +1,5 @@
 {
   "dependencies": {
-    "@tanstack/react-query": "catalog:",
-    "@workspace/db": "workspace:*",
-    "@workspace/db-react": "workspace:*",
-    "@workspace/dev": "workspace:*",
-    "@workspace/explorer": "workspace:*",
-    "@workspace/onboarding": "workspace:*",
-    "@workspace/portfolio": "workspace:*",
-    "@workspace/settings": "workspace:*",
-    "@workspace/tools": "workspace:*",
     "@workspace/ui": "workspace:*",
     "lucide-react": "catalog:",
     "react": "catalog:",
@@ -26,7 +17,7 @@
     "./*": "./src/*.tsx"
   },
   "license": "MIT",
-  "name": "@workspace/shell",
+  "name": "@workspace/explorer",
   "private": false,
   "scripts": {
     "check-types": "tsc --noEmit"
