--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@commitlint/types": "^20.0.0",
     "@cspell/dict-es-es": "^3.0.8",
     "@radix-ui/react-select": "^2.2.6",
+    "@types/node": "^24.10.0",
     "cspell": "^9.2.1",
     "lefthook": "^2.0.1",
     "pkg-pr-new": "^0.0.60",
