--- a/packages/explorer/package.json
+++ b/packages/explorer/package.json
@@ -1,7 +1,12 @@
 {
   "dependencies": {
     "@hookform/resolvers": "catalog:",
+    "@solana/kit": "catalog:",
+    "@tanstack/react-query": "catalog:",
     "@workspace/db": "workspace:*",
+    "@workspace/db-react": "workspace:*",
+    "@workspace/solana-client": "workspace:*",
+    "@workspace/solana-client-react": "workspace:*",
     "@workspace/ui": "workspace:*",
     "react": "catalog:",
     "react-dom": "catalog:",
