feat: eager load settings

--- a/packages/db-react/package.json
+++ b/packages/db-react/package.json
@@ -5,7 +5,8 @@
     "@workspace/ui": "workspace:*",
     "dexie-react-hooks": "^4.2.0",
     "react": "catalog:",
-    "react-dom": "catalog:"
+    "react-dom": "catalog:",
+    "react-router": "catalog:"
   },
   "devDependencies": {
     "@types/bun": "catalog:",
