feat(i18n): add language setting

--- a/packages/shell/package.json
+++ b/packages/shell/package.json
@@ -5,6 +5,7 @@
     "@workspace/db-react": "workspace:*",
     "@workspace/dev": "workspace:*",
     "@workspace/explorer": "workspace:*",
+    "@workspace/i18n": "workspace:*",
     "@workspace/onboarding": "workspace:*",
     "@workspace/portfolio": "workspace:*",
     "@workspace/settings": "workspace:*",
