fix: ensure CI fails when bun lock file changes

--- a/.github/workflows/actions/install-dependencies/action.yml
+++ b/.github/workflows/actions/install-dependencies/action.yml
@@ -16,4 +16,9 @@ runs:
 
     - name: Install dependencies
       shell: bash
-      run: bun ci
+      run: bun install
+
+# TODO: This check can go when this issue is fixed https://github.com/oven-sh/bun/issues/24223
+    - name: Check for dirty git repo
+      shell: bash
+      run:  git diff --quiet --ignore-submodules HEAD
