feat(mobile): add theming and crypto deps

--- a/biome.json
+++ b/biome.json
@@ -77,6 +77,18 @@
           }
         }
       }
+    },
+    {
+      "includes": ["**/global.css"],
+      "linter": {
+        "enabled": false
+      }
+    },
+    {
+      "includes": ["**/babel.config.cjs"],
+      "linter": {
+        "enabled": false
+      }
     }
   ],
   "vcs": {
