--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,21 +1,31 @@
 {
   "dependencies": {
+    "@craftzdog/react-native-buffer": "^6.1.1",
     "@react-navigation/bottom-tabs": "^7.8.4",
     "@react-navigation/elements": "^2.8.1",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
+    "@workspace/keypair": "workspace:*",
     "culori": "^4.0.2",
     "eas-cli": "^16.26.0",
     "expo": "54.0.23",
     "expo-status-bar": "~3.0.8",
+    "https-browserify": "^1.0.0",
     "lucide-react-native": "^0.553.0",
-    "nativewind": "^5.0.0-preview.2",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-css": "^3.0.1",
+    "react-native-get-random-values": "^2.0.0",
+    "react-native-mmkv": "^4.0.0",
+    "react-native-nitro-modules": "^0.31.6",
+    "react-native-pbkdf2": "^1.0.2",
+    "react-native-quick-base64": "^2.2.2",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "readable-stream": "^4.7.0",
+    "stream-http": "^3.2.0",
+    "uniwind": "^1.0.1"
   },
   "devDependencies": {
     "@expo/metro-config": "~54.0.2",
@@ -23,23 +33,25 @@
     "@types/culori": "^4.0.1",
     "@types/react": "~19.1.10",
     "@workspace/config-typescript": "workspace:*",
+    "babel-plugin-module-resolver": "^5.0.2",
     "postcss": "^8.5.6",
-    "tailwindcss": "catalog:",
+    "tailwindcss": "^4.1.17",
     "typescript": "catalog:"
   },
   "main": "index.ts",
   "name": "mobile",
   "overrides": {
-    "lightningcss": "1.30.1"
+    "lightningcss": "1.30.1",
+    "react": "19.1.0"
   },
   "private": true,
   "scripts": {
-    "android": "expo start --android",
-    "dev": "expo start --clear",
+    "android": "expo run:android",
+    "dev": "expo start --clear --dev-client --reset-cache",
     "doctor": " bunx expo-doctor@latest --verbose",
     "install:check": " bunx expo install --check",
     "install:fix": " bunx expo install --fix",
-    "ios": "expo start --ios"
+    "ios": "expo run:ios"
   },
   "type": "module",
   "version": "1.0.0"
