feat(mobile): configure uniwind

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -6,6 +6,7 @@
         "foregroundImage": "./assets/adaptive-icon.png"
       },
       "edgeToEdgeEnabled": true,
+      "package": "build.samui.mobile",
       "predictiveBackGestureEnabled": false
     },
     "icon": "./assets/icon.png",
