--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -3,6 +3,9 @@
     "@react-navigation/bottom-tabs": "^7.8.5",
     "@react-navigation/native": "^7.1.20",
     "@react-navigation/native-stack": "^7.6.3",
+    "@solana/webcrypto-ed25519-polyfill": "^5.0.0",
+    "@workspace/keypair": "workspace:*",
+    "@workspace/ui": "workspace:*",
     "clsx": "^2.1.1",
     "expo": "~54.0.25",
     "expo-status-bar": "~3.0.8",
@@ -12,6 +15,7 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-mmkv": "^4.0.0",
+    "react-native-quick-crypto": "^0.7.17",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
