--- a/packages/portfolio/package.json
+++ b/packages/portfolio/package.json
@@ -21,9 +21,7 @@
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@workspace/config-typescript": "workspace:*",
-    "@workspace/config-vitest": "workspace:*",
-    "typescript": "catalog:",
-    "vitest": "catalog:"
+    "typescript": "catalog:"
   },
   "exports": {
     "./*": "./src/*.tsx"
@@ -32,9 +30,7 @@
   "name": "@workspace/portfolio",
   "private": false,
   "scripts": {
-    "check-types": "tsc --noEmit",
-    "test": "vitest run",
-    "test:watch": "vitest --watch"
+    "check-types": "tsc --noEmit"
   },
   "type": "module",
   "version": "0.0.0"
