--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -78,9 +78,9 @@ jobs:
 
       - name: Start Surfpool
         run: |
-          docker run -d --name surfpool -p 8899:8899 -p 8900:8900 surfpool/surfpool start --offline --no-tui
-          bunx wait-on tcp:localhost:8899 --verbose
-          bunx wait-on tcp:localhost:8900 --verbose
+          docker run -d --name surfpool -p 8899:8899 -p 8900:8900 surfpool/surfpool:main start --offline --no-tui
+          bunx wait-on tcp:localhost:8899 --verbose --timeout 10000
+          bunx wait-on tcp:localhost:8900 --verbose --timeout 10000
 
       - name: Test Integration
         run: bun run test:integration
