--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -4,6 +4,7 @@
     "@workspace/core": "workspace:*",
     "@workspace/env": "workspace:*",
     "dexie": "^4.2.1",
+    "nanoid": "^5.1.6",
     "zod": "catalog:"
   },
   "devDependencies": {
