chore: update renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,128 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:recommended"]
+  "extends": ["config:best-practices", "schedule:earlyMondays"],
+  "packageRules": [
+    {
+      "enabled": false,
+      "matchFileNames": ["apps/mobile/package.json"],
+      "matchPackageNames": [
+        "@expo/fingerprint",
+        "@expo/metro-runtime",
+        "@expo/vector-icons",
+        "@expo/ui",
+        "@react-native-async-storage/async-storage",
+        "@react-native-community/datetimepicker",
+        "@react-native-masked-view/masked-view",
+        "@react-native-community/netinfo",
+        "@react-native-community/slider",
+        "@react-native-community/viewpager",
+        "@react-native-picker/picker",
+        "@react-native-segmented-control/segmented-control",
+        "@stripe/stripe-react-native",
+        "eslint-config-expo",
+        "expo-analytics-amplitude",
+        "expo-app-auth",
+        "expo-app-loader-provider",
+        "expo-apple-authentication",
+        "expo-application",
+        "expo-asset",
+        "expo-audio",
+        "expo-auth-session",
+        "expo-av",
+        "expo-background-fetch",
+        "expo-background-task",
+        "expo-battery",
+        "expo-blur",
+        "expo-brightness",
+        "expo-build-properties",
+        "expo-calendar",
+        "expo-camera",
+        "expo-cellular",
+        "expo-checkbox",
+        "expo-clipboard",
+        "expo-constants",
+        "expo-contacts",
+        "expo-crypto",
+        "expo-dev-client",
+        "expo-device",
+        "expo-document-picker",
+        "expo-file-system",
+        "expo-font",
+        "expo-gl",
+        "expo-glass-effect",
+        "expo-google-app-auth",
+        "expo-haptics",
+        "expo-image",
+        "expo-image-loader",
+        "expo-image-manipulator",
+        "expo-image-picker",
+        "expo-intent-launcher",
+        "expo-insights",
+        "expo-keep-awake",
+        "expo-linear-gradient",
+        "expo-linking",
+        "expo-local-authentication",
+        "expo-localization",
+        "expo-location",
+        "expo-mail-composer",
+        "expo-manifests",
+        "expo-maps",
+        "expo-media-library",
+        "expo-mesh-gradient",
+        "expo-module-template",
+        "expo-modules-core",
+        "expo-navigation-bar",
+        "expo-network",
+        "expo-notifications",
+        "expo-print",
+        "expo-live-photo",
+        "expo-router",
+        "expo-screen-capture",
+        "expo-screen-orientation",
+        "expo-secure-store",
+        "expo-sensors",
+        "expo-server",
+        "expo-sharing",
+        "expo-sms",
+        "expo-speech",
+        "expo-splash-screen",
+        "expo-sqlite",
+        "expo-status-bar",
+        "expo-store-review",
+        "expo-symbols",
+        "expo-system-ui",
+        "expo-task-manager",
+        "expo-tracking-transparency",
+        "expo-updates",
+        "expo-video-thumbnails",
+        "expo-video",
+        "expo-web-browser",
+        "jest-expo",
+        "lottie-react-native",
+        "react",
+        "react-dom",
+        "react-native",
+        "react-native-web",
+        "react-native-gesture-handler",
+        "react-native-get-random-values",
+        "react-native-keyboard-controller",
+        "react-native-maps",
+        "react-native-pager-view",
+        "react-native-worklets",
+        "react-native-reanimated",
+        "react-native-screens",
+        "react-native-safe-area-context",
+        "react-native-svg",
+        "react-native-view-shot",
+        "react-native-webview",
+        "sentry-expo",
+        "unimodules-app-loader",
+        "unimodules-image-loader-interface",
+        "@shopify/react-native-skia",
+        "@shopify/flash-list",
+        "@sentry/react-native",
+        "react-native-bootsplash"
+      ]
+    }
+  ]
 }
