feat: add React Compiler support
refactor: update Vite configs for desktop & extension environments and clean up package.json

fix: build issues

fix: add dependency for extension

fix: add dependency for desktop

Remove extra line in package.json dependencies

Signed-off-by: Byte  <168300867+bytehash69@users.noreply.github.com>

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "catalog:",
     "@vitejs/plugin-react": "^5.0.0",
     "@workspace/config-typescript": "workspace:*",
+    "babel-plugin-react-compiler": "^1.0.0",
     "tailwindcss": "catalog:",
     "typescript": "catalog:",
     "vite": "^7.0.4"
