feat: add react compiler support

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,8 +14,9 @@
   "devDependencies": {
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
-    "@vitejs/plugin-react": "^5.1.0",
+    "@vitejs/plugin-react": "catalog:",
     "@workspace/config-typescript": "workspace:*",
+    "babel-plugin-react-compiler": "catalog:",
     "globals": "catalog:",
     "typescript": "catalog:",
     "vite": "^7.1.12",
