--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/node": "^24.10.0",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
+    "@vitejs/plugin-react": "5.1.0",
+    "babel-plugin-react-compiler": "1.0.0",
     "effect": "3.19.3",
     "eslint": "9.38.0",
     "globals": "16.4.0",
