feat(portfolio): translate portfolio pages

--- a/packages/portfolio/package.json
+++ b/packages/portfolio/package.json
@@ -7,6 +7,7 @@
     "@workspace/db": "workspace:*",
     "@workspace/db-react": "workspace:*",
     "@workspace/explorer": "workspace:*",
+    "@workspace/i18n": "workspace:*",
     "@workspace/keypair": "workspace:*",
     "@workspace/solana-client": "workspace:*",
     "@workspace/solana-client-react": "workspace:*",
