--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -20,6 +20,7 @@
     "@wxt-dev/module-react": "^1.1.3",
     "babel-plugin-react-compiler": "catalog:",
     "typescript": "catalog:",
+    "vite": "7.1.12",
     "wxt": "catalog:"
   },
   "name": "extension",
