--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,9 +19,9 @@
     "babel-plugin-react-compiler": "catalog:",
     "globals": "catalog:",
     "typescript": "catalog:",
-    "vite": "^7.1.12",
-    "vite-bundle-analyzer": "^1.2.3",
-    "vite-tsconfig-paths": "^5.1.4",
+    "vite": "catalog:",
+    "vite-bundle-analyzer": "catalog:",
+    "vite-tsconfig-paths": "catalog:",
     "wrangler": "^4.45.0"
   },
   "name": "web",
