--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -6,6 +6,7 @@
     "@solana/react": "^5.0.0",
     "@solana/wallet-standard-chains": "^1.1.1",
     "@solana/wallet-standard-features": "^1.3.0",
+    "@tailwindcss/vite": "^4.1.14",
     "@wallet-standard/core": "^1.1.1",
     "@wallet-standard/react": "^1.0.1",
     "@wallet-standard/ui-registry": "^1.0.1",
@@ -21,7 +22,8 @@
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
-    "@workspace/config-vite": "workspace:*",
+    "@vitejs/plugin-react": "^5.0.4",
+    "babel-plugin-react-compiler": "^19.1.0-rc.3",
     "globals": "^16.4.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
