feat: add shared vite configuration package (#625)
Co-authored-by: Tobey Codes <tobey@tobey.codes>

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -7,12 +7,11 @@
     "react-dom": "catalog:"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "catalog:",
     "@tauri-apps/cli": "2.9.4",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
-    "@vitejs/plugin-react": "catalog:",
     "@workspace/config-typescript": "workspace:*",
+    "@workspace/config-vite": "workspace:*",
     "babel-plugin-react-compiler": "catalog:",
     "tailwindcss": "catalog:",
     "typescript": "catalog:",
