feat(env): add get entrypoint function and use for shell feature

--- a/packages/background/package.json
+++ b/packages/background/package.json
@@ -10,7 +10,7 @@
     "@workspace/db": "workspace:*",
     "@workspace/keypair": "workspace:*",
     "@workspace/ui": "workspace:*",
-    "@wxt-dev/browser": "^0.1.4"
+    "@wxt-dev/browser": "catalog:"
   },
   "devDependencies": {
     "@types/bun": "catalog:",
