--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "@vitejs/plugin-react": "5.1.0",
+    "@wxt-dev/browser": "0.1.4",
     "babel-plugin-react-compiler": "1.0.0",
     "effect": "3.19.3",
     "eslint": "9.38.0",
